--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -24,4 +24,18 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+} */
+
+@import url("https://fonts.cdnfonts.com/css/sf-ui-display");
+
+.font-sf {
+  font-family: "SF UI Display", sans-serif;
+}
+
+.bg-dark {
+  background-color: #212121;
+}
+
+body {
+  background-color: #212121;
 }
