--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,6 +36,10 @@ body {
   background-color: #212121;
 }
 
+.text-dark {
+  background-color: #212121;
+}
+
 body {
   background-color: #212121;
 }
@@ -56,6 +60,7 @@ body {
   font-weight: 700;
   line-height: normal;
 }
+
 .bg-fade {
  background: rgba(0, 0, 0, 0.50);
 }
